# trackcast

./: .gitignore  CLAUDE.md  CNAME  DESIGN.md  README.md  TODOS.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: dj-software-report.yml
.github/workflows/: build-desktop.yml  deploy-site.yml
apps/mac/: README.md  package.json
apps/mac/src-tauri/: tauri.conf.json
apps/mac/src-tauri/capabilities/: default.json
apps/mac/src-tauri/icons/: icon.icns
apps/mac/src-tauri/src/: lib.rs  state.rs  telegram.rs  traktor_setup.rs  unbox.rs
apps/windows/: README.md  package.json  vite.config.js
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/icons/: icon.icns
apps/windows/src-tauri/src/: history.rs  lib.rs  state.rs  telegram.rs  traktor_setup.rs  unbox.rs
docs/: repo-structure.md
site/: 404.html  CNAME  README.md  hero-trackcast-final.html  icon-sandbox.html  index.html  onboarding.html  styles.css
src/: App.jsx  styles.css
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: history.rs  lib.rs  main.rs  state.rs  traktor_setup.rs  unbox.rs
src/components/: HistoryView.jsx  MainView.jsx  Onboarding.jsx  Settings.jsx
