[package]
name = "trackcast"
version = "0.1.0"
description = "Broadcast your DJ set live + save your tracklist automatically"
authors = ["TrackCast"]
edition = "2021"

[lib]
name = "trackcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
